--- a/templates/guisso/0/docker-compose.yml
+++ b/templates/guisso/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   db-migrate:
-    image: instedd/guisso:1.2.1
+    image: instedd/guisso:1.3-pre1
     environment:
       DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
     command:
@@ -9,7 +9,7 @@ services:
     labels:
       io.rancher.container.start_once: 'true'
   guisso:
-    image: instedd/guisso:1.2.1
+    image: instedd/guisso:1.3-pre1
     environment:
       DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
       RAILS_CONFIG__action_mailer__smtp_settings__user_name: ${SMTP_USER}
