--- a/templates/guisso/config.yml
+++ b/templates/guisso/config.yml
@@ -1,7 +1,7 @@
 name: Guisso
 description: |
   InSTEDD Guisso
-version: 1.2.1
+version: 1.3-pre1
 category: Security
 maintainer: Juan Wajnerman <waj@manas.tech>
 license: The MIT License
