--- a/templates/nuntium/config.yml
+++ b/templates/nuntium/config.yml
@@ -1,7 +1,7 @@
 name: Nuntium
 description: |
   InSTEDD Nuntium
-version: 1.9.1
+version: '1.10'
 category: Messaging
 maintainer: Juan Wajnerman <waj@manas.tech>
 license: The MIT License
