--- a/templates/guisso/0/docker-compose.yml
+++ b/templates/guisso/0/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   db-migrate:
-    image: instedd/guisso:1.3-pre1
+    image: instedd/guisso:${GUISSO_VERSION}
     environment:
       DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
     command:
@@ -9,7 +9,7 @@ services:
     labels:
       io.rancher.container.start_once: 'true'
   guisso:
-    image: instedd/guisso:1.3-pre1
+    image: instedd/guisso:${GUISSO_VERSION}
     environment:
       DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
       RAILS_CONFIG__action_mailer__smtp_settings__user_name: ${SMTP_USER}
@@ -17,3 +17,11 @@ services:
       RAILS_CONFIG__action_mailer__smtp_settings__address: ${SMTP_HOST}
       RAILS_CONFIG__action_mailer__smtp_settings__port: ${SMTP_PORT}
       DEVISE_EMAIL: ${DEVISE_EMAIL}
+      SECRET_TOKEN: ${SECRET_TOKEN}
+      DEVISE_SECRET_KEY: ${DEVISE_SECRET_KEY}
+      COOKIE_NAME: ${COOKIE_NAME}
+      COOKIE_DOMAIN: ${COOKIE_DOMAIN}
+      {{- if .Values.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      {{- end }}
