--- a/templates/guisso/0/rancher-compose.yml
+++ b/templates/guisso/0/rancher-compose.yml
@@ -1,9 +1,14 @@
 .catalog:
   name: Guisso
-  version: 1.3-pre1
+  version: '0.1'
   description: InSTEDD Guisso
   minimum_rancher_version: v1.5.0
   questions:
+    - variable: GUISSO_VERSION
+      label: Guisso version
+      required: true
+      type: string
+
     - variable: DATABASE_HOST
       label: Database Host
       required: true
@@ -45,3 +50,30 @@
       required: true
       type: string
       default: noreply@instedd.org
+
+    - variable: SECRET_TOKEN
+      label: Secret token
+      required: true
+      type: password
+    - variable: DEVISE_SECRET_KEY
+      label: Devise secret key
+      type: password
+      required: true
+
+    - variable: GOOGLE_CLIENT_ID
+      label: Google client ID
+      type: string
+    - variable: GOOGLE_CLIENT_SECRET
+      label: Google client secret
+      type: password
+
+    - variable: COOKIE_NAME
+      label: Guisso cookie name
+      type: string
+      required: true
+      default: guisso
+    - variable: COOKIE_DOMAIN
+      label: Guisso cookie domain
+      type: string
+      required: true
+      default: instedd.org
