--- a/templates/nuntium/1/docker-compose.yml
+++ b/templates/nuntium/1/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   web: &rails
-    image: instedd/nuntium:1.10-pre2
+    image: instedd/nuntium:${NUNTIUM_VERSION}
     environment:
       DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
       MEMCACHE_SERVER: memcached:11211
