--- a/templates/nuntium/1/rancher-compose.yml
+++ b/templates/nuntium/1/rancher-compose.yml
@@ -1,9 +1,14 @@
 .catalog:
   name: Nuntium
-  version: '1.10'
+  version: '0.1'
   description: InSTEDD Nuntium
   minimum_rancher_version: v1.5.0
   questions:
+    - variable: NUNTIUM_VERSION
+      label: Nuntium version
+      required: true
+      type: string
+
     - variable: DATABASE_HOST
       label: Database Host
       required: true
