--- a/templates/nuntium/0/rancher-compose.yml
+++ b/templates/nuntium/0/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: Nuntium
-  version: 1.9.1
+  version: '0.1'
   description: InSTEDD Nuntium
   minimum_rancher_version: v1.5.0
   questions:
