--- a/templates/surveda/0/docker-compose.yml
+++ b/templates/surveda/0/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       EMAIL_FROM_EMAIL: ${EMAIL_FROM_EMAIL}
       EMAIL_FROM_NAME: ${EMAIL_FROM_NAME}
       GOOGLE_URL_SHORTENER_API_KEY: ${GOOGLE_URL_SHORTENER_API_KEY}
+      {{- if .Values.MOBILE_WEB_BASE_URL }}
+      MOBILE_WEB_BASE_URL: ${MOBILE_WEB_BASE_URL}
+      {{- end }}
       HOST: ${HOST}
       INITIAL_ELIGIBILITY_RATE: ${INITIAL_ELIGIBILITY_RATE}
       INITIAL_RESPONSE_RATE: ${INITIAL_RESPONSE_RATE}
