--- a/templates/surveda/0/rancher-compose.yml
+++ b/templates/surveda/0/rancher-compose.yml
@@ -134,6 +134,9 @@
     - variable: NUNTIUM_CLIENT_SECRET
       label: Surveda Client secret in Guisso to access Nuntium
       type: string
+    - variable: NUNTIUM_FRIENDLY_NAME
+      label: Friendly name for Nuntium instance (only required when linking with more than one instance)
+      type: string
 
     - variable: VERBOICE_BASE_URL
       label: Verboice base URL
@@ -149,4 +152,7 @@
       type: string
     - variable: VERBOICE_CLIENT_SECRET
       label: Surveda Client secret in Guisso to access Verboice
+      type: string
+    - variable: VERBOICE_FRIENDLY_NAME
+      label: Friendly name for Verboice instance (only required when linking with more than one instance)
       type: string
