--- a/templates/aida/0/rancher-compose.yml
+++ b/templates/aida/0/rancher-compose.yml
@@ -36,7 +36,7 @@
       type: string
       required: true
       default: aida
-    - variable: RUNTIME_DATABASE_NAME
+    - variable: UI_DATABASE_NAME
       label: UI database name
       type: string
       required: true
