[aida] Added missing configuration parameter for PRIVATE_KEY

--- a/templates/aida/0/rancher-compose.yml
+++ b/templates/aida/0/rancher-compose.yml
@@ -78,6 +78,10 @@
       label: Secret key base (used to sign/encrypt session tokens)
       type: password
       required: true
+    - variable: PRIVATE_KEY
+      label: Runtime private key
+      type: password
+      required: true
 
     - variable: SENTRY_DSN
       label: Sentry DSN
