[aida] Some more fixes in variable names

--- a/templates/aida/0/docker-compose.yml
+++ b/templates/aida/0/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       SETTINGS__BASE_URL: https://${HOSTNAME}
       SETTINGS__SMTP_SETTINGS__USER_NAME: ${SMTP_USER}
       SETTINGS__SMTP_SETTINGS__PASSWORD: ${SMTP_PASS}
-      SETTINGS__SMTP_SETTINGS__ADDRESS: ${SMTP_SERVER}
+      SETTINGS__SMTP_SETTINGS__ADDRESS: ${SMTP_HOST}
       SETTINGS__SMTP_SETTINGS__PORT: ${SMTP_PORT}
       GUISSO_URL: ${GUISSO_URL}
       GUISSO_CLIENT_ID: ${GUISSO_CLIENT_ID}
