[guiso] Fix database type for web container

--- a/templates/guisso/0/docker-compose.yml
+++ b/templates/guisso/0/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   guisso:
     image: instedd/guisso:${GUISSO_VERSION}
     environment:
-      DATABASE_URL: mysql2://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
+      DATABASE_URL: ${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
       RAILS_CONFIG__action_mailer__smtp_settings__user_name: ${SMTP_USER}
       RAILS_CONFIG__action_mailer__smtp_settings__password: ${SMTP_PASS}
       RAILS_CONFIG__action_mailer__smtp_settings__address: ${SMTP_HOST}
