[aida] Add emails from argument

--- a/templates/aida/0/docker-compose.yml
+++ b/templates/aida/0/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       SETTINGS__SMTP_SETTINGS__PASSWORD: ${SMTP_PASS}
       SETTINGS__SMTP_SETTINGS__ADDRESS: ${SMTP_HOST}
       SETTINGS__SMTP_SETTINGS__PORT: ${SMTP_PORT}
+      SETTINGS__MAILER__FROM: ${EMAILS_FROM}
       GUISSO_URL: ${GUISSO_URL}
       GUISSO_CLIENT_ID: ${GUISSO_CLIENT_ID}
       GUISSO_CLIENT_SECRET: ${GUISSO_CLIENT_SECRET}
