[surveda] Allow channel UI configuration

--- a/templates/surveda/0/docker-compose.yml
+++ b/templates/surveda/0/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       {{- $nuntiumClientSecrets := split "," .Values.NUNTIUM_CLIENT_SECRET }}
       {{- $nuntiumGuissoBaseUrls := split "," .Values.NUNTIUM_GUISSO_BASE_URL }}
       {{- $nuntiumFriendlyNames := split "," .Values.NUNTIUM_FRIENDLY_NAME }}
+      {{- $nuntiumChannelUis := split "," .Values.NUNTIUM_CHANNEL_UI }}
       NUNTIUM_INSTANCES: {{ $nuntiumAppIds | len }}
       {{- range $key, $value := $nuntiumAppIds }}
       {{- $index := substr 1 -1 $key | atoi | add1 }}
@@ -62,6 +63,7 @@ services:
       NUNTIUM_CLIENT_SECRET_{{ $index }}: {{ index $nuntiumClientSecrets $key | trim }}
       NUNTIUM_GUISSO_BASE_URL_{{ $index }}: {{ index $nuntiumGuissoBaseUrls $key | trim }}
       NUNTIUM_FRIENDLY_NAME_{{ $index }}: {{ index $nuntiumFriendlyNames $key | trim }}
+      NUNTIUM_CHANNEL_UI_{{ $index }}: {{ index $nuntiumChannelUis $key | trim }}
       {{- end }}
       {{- else }}
       NUNTIUM_APP_ID: ${NUNTIUM_APP_ID}
@@ -69,6 +71,7 @@ services:
       NUNTIUM_CLIENT_ID: ${NUNTIUM_CLIENT_ID}
       NUNTIUM_CLIENT_SECRET: ${NUNTIUM_CLIENT_SECRET}
       NUNTIUM_GUISSO_BASE_URL: ${NUNTIUM_GUISSO_BASE_URL}
+      NUNTIUM_CHANNEL_UI: ${NUNTIUM_CHANNEL_UI}
       {{- end }}
 
       {{- if contains "," .Values.VERBOICE_APP_ID }}
@@ -78,6 +81,7 @@ services:
       {{- $verboiceClientSecrets := split "," .Values.VERBOICE_CLIENT_SECRET }}
       {{- $verboiceGuissoBaseUrls := split "," .Values.VERBOICE_GUISSO_BASE_URL }}
       {{- $verboiceFriendlyNames := split "," .Values.VERBOICE_FRIENDLY_NAME }}
+      {{- $verboiceChannelUis := split "," .Values.VERBOICE_CHANNEL_UI }}
       VERBOICE_INSTANCES: {{ $verboiceAppIds | len }}
       {{- range $key, $value := $verboiceAppIds }}
       {{- $index := substr 1 -1 $key | atoi | add1 }}
@@ -87,6 +91,7 @@ services:
       VERBOICE_CLIENT_SECRET_{{ $index }}: {{ index $verboiceClientSecrets $key | trim }}
       VERBOICE_GUISSO_BASE_URL_{{ $index }}: {{ index $verboiceGuissoBaseUrls $key | trim }}
       VERBOICE_FRIENDLY_NAME_{{ $index }}: {{ index $verboiceFriendlyNames $key | trim }}
+      VERBOICE_CHANNEL_UI_{{ $index }}: {{ index $verboiceChannelUis $key | trim }}
       {{- end }}
       {{- else }}
       VERBOICE_APP_ID: ${VERBOICE_APP_ID}
@@ -94,6 +99,7 @@ services:
       VERBOICE_CLIENT_ID: ${VERBOICE_CLIENT_ID}
       VERBOICE_CLIENT_SECRET: ${VERBOICE_CLIENT_SECRET}
       VERBOICE_GUISSO_BASE_URL: ${VERBOICE_GUISSO_BASE_URL}
+      VERBOICE_CHANNEL_UI: ${VERBOICE_CHANNEL_UI}
       {{- end }}
 
     labels:
