--- a/templates/guisso/0/docker-compose.yml
+++ b/templates/guisso/0/docker-compose.yml
@@ -8,8 +8,14 @@ services:
     - /app/migrate
     labels:
       io.rancher.container.start_once: 'true'
-  guisso:
+  web:
     image: instedd/guisso:${GUISSO_VERSION}
+    {{- if .Values.WEB_MEM_LIMIT }}
+    mem_limit: ${WEB_MEM_LIMIT}
+    {{- end }}
+    {{- if .Values.WEB_MEM_RESERVATION }}
+    mem_reservation: ${WEB_MEM_RESERVATION}
+    {{- end }}
     environment:
       DATABASE_URL: ${DATABASE_TYPE}://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}/${DATABASE_NAME}
       RAILS_CONFIG__action_mailer__smtp_settings__user_name: ${SMTP_USER}
