--- a/templates/aida/0/docker-compose.yml
+++ b/templates/aida/0/docker-compose.yml
@@ -51,3 +51,7 @@ services:
     labels:
       io.rancher.container.start_once: "true"
       io.rancher.container.pull_image: always
+  redis:
+    image: redis:4
+    labels:
+      io.rancher.container.pull_image: always
