--- a/templates/nuntium/1/rancher-compose.yml
+++ b/templates/nuntium/1/rancher-compose.yml
@@ -62,3 +62,25 @@
       required: true
       type: string
       default: nuntium-rabbitmq-data
+
+    - variable: WEB_MEM_LIMIT
+      label: Memory limit (web process)
+      type: string
+      required: false
+      default: 512m
+    - variable: WEB_MEM_RESERVATION
+      label: Memory reservation (web process)
+      type: string
+      required: false
+      default: 256m
+
+    - variable: WORKER_MEM_LIMIT
+      label: Memory limit (worker processes)
+      type: string
+      required: false
+      default: 256m
+    - variable: WORKER_MEM_RESERVATION
+      label: Memory reservation (worker processes)
+      type: string
+      required: false
+      default: 128m
