[nuntium] WEB_PUMA_FLAGS are not required

--- a/templates/nuntium/1/rancher-compose.yml
+++ b/templates/nuntium/1/rancher-compose.yml
@@ -63,6 +63,12 @@
       type: string
       default: nuntium-rabbitmq-data
 
+    - variable: WEB_PUMA_FLAGS
+      label: Flags for Puma web server
+      type: string
+      required: false
+      default: "--preload -w 4"
+
     - variable: WEB_MEM_LIMIT
       label: Memory limit (web process)
       type: string
@@ -73,12 +79,6 @@
       type: string
       required: false
       default: 256m
-
-    - variable: WEB_PUMA_FLAGS
-      label: Flags for Puma web server
-      type: string
-      required: true
-      default: "--preload -w 4"
 
     - variable: WORKER_MEM_LIMIT
       label: Memory limit (worker processes)
