--- a/templates/verboice/0/docker-compose.yml
+++ b/templates/verboice/0/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       INPUT_PORT: '5038'
     labels:
       io.rancher.container.pull_image: always
+    mem_limit: 2m
+    mem_reservation: 1m
   web:
     image: instedd/verboice:${VERBOICE_VERSION}
     environment:
@@ -25,6 +27,12 @@ services:
       {{- end }}
     volumes:
     - ${VOLUME_DATA}:/app/data
+    {{- if .Values.WEB_MEM_LIMIT }}
+    mem_limit: ${WEB_MEM_LIMIT}
+    {{- end }}
+    {{- if .Values.WEB_MEM_RESERVATION }}
+    mem_reservation: ${WEB_MEM_RESERVATION}
+    {{- end }}
     labels:
       io.rancher.container.pull_image: always
   asterisk:
@@ -39,6 +47,12 @@ services:
     - ${VOLUME_DATA}:/data
     ports:
     - 5060:5060/udp
+    {{- if .Values.ASTERISK_MEM_LIMIT }}
+    mem_limit: ${ASTERISK_MEM_LIMIT}
+    {{- end }}
+    {{- if .Values.ASTERISK_MEM_RESERVATION }}
+    mem_reservation: ${ASTERISK_MEM_RESERVATION}
+    {{- end }}
     labels:
       io.rancher.container.dns: 'true'
       io.rancher.sidekicks: asterisk-bridge
@@ -63,6 +77,12 @@ services:
     - ${VOLUME_ASTERISK_CONFIG}:/usr/local/etc/asterisk
     - ${VOLUME_SOUNDS}:/usr/local/var/lib/asterisk/sounds/verboice
     - ${VOLUME_DATA}:/data
+    {{- if .Values.BROKER_MEM_LIMIT }}
+    mem_limit: ${BROKER_MEM_LIMIT}
+    {{- end }}
+    {{- if .Values.BROKER_MEM_RESERVATION }}
+    mem_reservation: ${BROKER_MEM_RESERVATION}
+    {{- end }}
     tty: true
     pid: host
     labels:
