--- a/infra-templates/zabbix/0/rancher-compose.yml
+++ b/infra-templates/zabbix/0/rancher-compose.yml
@@ -16,3 +16,7 @@
       required: true
       type: string
       default: rancher-agent
+    - variable: HOST_GROUP
+      label: Host group where to place discovered proxy hosts
+      required: true
+      type: string
